# cv-fun

./: .gitignore  README.md  pyproject.toml
source/: config.py  main_dev.py
source/ml/: data.py  model.py  train.py  utils.py
