[tool.poetry]
name = "cv-fun"
version = "0.1.0"
description = "Computer Vision Fun"
authors = ["Bertan Günyel <bertan.gunyel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3"
numpy = "^1.26.3"
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
matplotlib = "^3.9.2"

torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
datasets = "^3.0.0"
timm = "^1.0.9"
polars = "^1.7.1"
scikit-learn = "^1.5.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
